updated contact form styles: fix overflowing inputs from parent div.

--- a/src/styles/contactForm.css
+++ b/src/styles/contactForm.css
@@ -3,18 +3,19 @@
     border-radius: 1em;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     opacity: 100%;
-    padding: 1em;
+    padding: 1em 1em;
     margin-bottom: 0.75em;
     max-width: 27em;
     width: 100%;
 }
 
 .contact-form label {
+    box-sizing: border-box;
     color: #cee3f8;
     display: block;
     margin: 0 auto 0 auto;
-    padding: 0.25em 0.25em 0.25em 0.25em;
-    max-width: 26em;
+    max-width: 30em;
+    padding: 0.25em 0.25em 0.25em 1em;
     width: 100%
 }
 
@@ -22,17 +23,17 @@
     background-color: #e4e3ff;
     border: 1px solid #171c30;
     border-radius: 0.5em;
+    box-sizing: border-box;
     color: #171c30;
     display: block;
     margin: 0 auto 0 auto;
-    padding-bottom: 0.75em;
-    padding-left: 1em;
-    padding-top: 0.75em;
+    padding: 0.75em 1em;
     max-width: 30em;
     width: 100%
 }
 
 .contact-form textarea {
+    box-sizing: border-box;
     background-color: #e4e3ff;
     border: 1px solid #171c30;
     border-radius: 0.5em;
@@ -40,15 +41,14 @@
     display: block;
     height: 10em;
     margin: 0 auto 0 auto;
-    padding-bottom: 0.75em;
-    padding-left: 1em;
-    padding-top: 0.75em;
+    padding: 0.75em 1em;
     resize: none;
     max-width: 30em;
     width: 100%
 }
 
 .contact-form button {
+    box-sizing: border-box;
     background-color: #eeac31;
     color:#171c30;
     border: 1px solid #171c30;
